website job rendered to html

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,37 +1,35 @@
 <!Doctype html>
 <html>
-  <head>
-    <title>Home</title>
-    <style>
-      h1{
-        font-family:helvetica;
-        font-size: 30px;
-        font-weight: bold;
-        color: rgb(0,100,100);
-      }
-      h2{
-        font-family:helvetica;
-        font-size: 20px;
-        font-weight: bold;
-        color: rgb(0,100,100);
-      }
-    </style>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   </head>
+    <title>Home</title>
+   
+</head>
   <body>
-    <br>
-    
-    
-    <h1>Welcome to Hashim Jobs Website</h1>
-    <br>
-    
-    
-    <img src="https://media.istockphoto.com/id/2198454540/photo/ethiopia-puzzle-map-forming-the-country-with-copy-space.jpg?s=1024x1024&w=is&k=20&c=BIwU31lBNle6of-jqHcxiYhZYvRGnqPJxKtepr19424=" height="250" width="500" alt="Ethiop">
-
-    <p>
-      you are my best friend in this live no body can separate us at all, please be noted and do not worry about anything
-    </p>
-    <h2>open positions</h2>
-    <button> contact us</button>
+    <div class="container">
+            <h1>Welcome to Hashim Jobs Website</h1>
+      <h3 class="text-center"> Ilike your things</h3>
+      <h4 > Internet   Of   the  things</h4>
+      
+      <img class="img-fluid" src="https://media.istockphoto.com/id/2198454540/photo/ethiopia-puzzle-map-forming-the-country-with-copy-space.jpg?s=1024x1024&w=is&k=20&c=BIwU31lBNle6of-jqHcxiYhZYvRGnqPJxKtepr19424=" height="250" width="500" alt="Ethiop">
+  
+      <p>
+        you are my best friend in this live no body can separate us at all, please be noted and do not worry about anything
+      </p>
+      <h2>open positions</h2>
+      <div>
+        {%for jobs in jobs%}
+   <div> {{jobs['title'],jobs['location']}}</div>
+        {%endfor%}
+      </div>
+      <div style="text-align:center">
+        <button style="align-items:center;" class="btn btn-primary btn-lg "> contact us</button>
+      </div>
+      </div>
+      
   </body>
 </html>  
 
