--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
       <p>
         you are my best friend in this live no body can separate us at all, please be noted and do not worry about anything
       </p>
-      <h2>open positions</h2>
+      <h2>open positions for sudanese</h2>
       <div>
         {%for jobs in jobs%}
    <div> {{jobs['title'],jobs['location']}}</div>
