--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-      <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+    <a class="navbar-brand" href="">
+      <img src="/static/ethiopia.jpg" width="30" height="30" alt="">
     </a>
   </nav>
 <meta charset="utf-8">
@@ -30,7 +30,7 @@
    <div> {{jobs['title'],jobs['location']}}</div>
         {%endfor%}
       </div>
-      <div style="text-align:center">
+      <div style="text-align:right">
         <button style="align-items:center;" class="btn btn-primary btn-lg "> contact us</button>
       </div>
       </div>
