--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -20,6 +20,7 @@
     <h4>Description</h4>
     <p>{{job['description']}}</p>
   </div>
+    {%include 'application_form.html'%}
      
   </body>
 </html>
